--- a/index.html
+++ b/index.html
@@ -31,7 +31,18 @@
     // 🧠 There are many ways to solve this, but practice using a for loop to iterate over the array.
     // 🧠 As you have done in the past, declare a variable before you start looping, to accumulate the result.
     function sumNumsFor(nums) {
-
+      let totalSum = 0;
+      for (let i = 0; i < nums.length; i++ ) {
+        let elem = nums[i]
+        if (typeof elem === 'number') {
+          if (elem === 13) {
+            return "I'm too superstitious!";
+          }
+          totalSum += elem
+        }
+      } 
+      return totalSum;
+    
     }
 
     // 👉 CHALLENGE 2
@@ -41,17 +52,40 @@
     // ❗ Notes:
     // 🧠 There are many ways to solve this, but practice using a for loop to iterate over the characters of the string.
     function stripVowels(str) {
-
+      const split = str.split('')
+      const result = []
+      for (let i = 0; i < split.length; i++) {
+        const char = split[i]
+        if (char !== 'a' && char !== 'e' && char !== 'i' && char !== 'o' && char !== 'u') {
+          result.push(char)
+      }
     }
+    return result.join('')
+    }
+
 
     // 👉 CHALLENGE 3
     // 🧠 Reimplement sumNumsFor using a while loop instead of a for loop.
     // 🧠 Examples of usage:
     // sumNumsWhile([1, 2, 3]) // should return 6
     // sumNumsWhile([1, 2, 13]) // should return "I'm too superstitious!"
-    function sumNumsWhile() {
+    function sumNumsWhile(nums) { 
+      let total = 0;
+      let idx = 0;
+      while (idx < nums.length) {
+        let elem = nums[idx]
+        if (typeof elem === 'number') {
+          if (elem === 13) {
+            return "I'm too superstitious!"
+          }
+          total += elem
+        }  
+        idx++     
+      }
+      return total
+      }
+  
 
-    }
 
     // 👉 CHALLENGE 4
     // 🧠 The function fightMonsters takes an integer (lifePoints) as its argument, and returns a string.
@@ -70,7 +104,15 @@
     // 🧠 There are many ways to solve this, but practice using a while loop.
     // 🧠 Work out using pen and paper how the round number and the lifePoints change after each round.
     // 🧠 As long as there are lifePoints, decrease lifePoints by round number, and increase round number by one.
-    function fightMonsters() {
+    function fightMonsters(lifePoints) {
+      let round = 1
+      while (lifePoints > 0) {
+        lifePoints -= round
+        if (lifePoints <= 0) {
+          return `You died in round ${round}`
+        }
+        round++
+      }
 
     }
 
@@ -81,8 +123,15 @@
     // findEvenNums([0, 1, 2, 3, 4]) // should return [0, 2, 4]
     // ❗ Notes:
     // 🧠 Use any kind of loop you'd like and the push method to populate the array of even numbers.
-    function findEvenNums() {
-
+    function findEvenNums(int) {
+      let evens = []
+      for (let idx in int) {
+        let num = int[idx]
+        if (num % 2=== 0) {
+          evens.push(num)
+        }
+      }
+      return evens
     }
 
     // 👉 CHALLENGE 6
@@ -92,10 +141,19 @@
     // 🧠 Ages in the subarrays should appear in the same order they appeared in the original array.
     // 🧠 Examples of usage:
     // separateAges([31, 12, 25, 65, 84, 20]) // should return [[12, 20], [31, 25, 65, 84]]
-    function separateAges() {
-
+    function separateAges(ages) {
+      let elem1 = [];
+      let elem2 = [];
+      for (let i = 0; i < ages.length; i++) {
+        let age = ages[i];
+        if (age < 21) {
+          elem1.push(age);
+        } else {
+          elem2.push(age);
+      }
     }
-
+    return [elem1, elem2];
+  }
     // 👉 CHALLENGE 7
     // 🧠 The function headAndTail takes an array as its argument.
     // 🧠 It returns an object with two properties: "head" and "tail".
@@ -103,7 +161,10 @@
     // 🧠 The "tail" prop contains an array holding the elements of the array after the first one.
     // 🧠 Examples of usage:
     // headAndTail([1, 2, 3]) // should return { head: 1, tail: [2, 3] }
-    function headAndTail() {
+    function headAndTail(arr) {
+      let head = arr[0]
+      let tail = arr.slice(1)
+      return { head, tail }
 
     }
 
@@ -114,9 +175,28 @@
     // nestedLoops(['hello', 'goodbye']) // should return ['hEllO', 'gOOdbyE']
     // ❗ Notes:
     // 🧠 To capitalize a string you can use its toUpperCase method: "a".toUpperCase() returns "A"
-    function nestedLoops() {
+    function nestedLoops(strings) {
+      let result = []
 
+      for (let idx in strings) {
+
+        let word = strings[idx]
+        let modifiedWord = ''
+        for (let idx in word) {
+
+          let char = word[idx]
+          if (char === 'a' || char === 'e' || char === 'i' || char === 'o' || char === 'u') {
+            let upperCased = char.toUpperCase()
+            modifiedWord += upperCased
+          } else {
+            modifiedWord += char
+          }
+        }
+        result.push(modifiedWord)
+      }
+       return result
     }
+
 
     // 👉 CHALLENGE 9
     // 🧠 The function crazyTrimmer takes an array as its argument.
@@ -129,7 +209,12 @@
     // 🧠 Practice using pop and slice.
     // 🧠 Note that pop modifies the original array in place and returns the "popped" element, whereas slice gives us a brand new array.
     function crazyTrimmer(arr) {
-
+      if (arr.length % 2 === 0) {
+        arr.pop()
+        return arr
+      } else {
+        return arr.slice(1, arr.length - 1)
+      }
     }
 
     // 🧪 TESTS, do not work below this line
